# lyra

./: .editorconfig  .gitignore  .pre-commit-config.yaml  <|"Ttl" -> 30|>  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  ERROR_ENHANCEMENT_SUMMARY.md  INSTALL.md  LYRA_MODULE_IMPLEMENTATION_PLAN.md  LYRA_MODULE_MIGRATION_STRATEGY.md  LYRA_MODULE_SYSTEM_SPECIFICATION.md  MEMORY_MANAGEMENT_ANALYSIS.md  ML_FRAMEWORK_PROGRESS.md  PHASE3B_PERFORMANCE_BENCHMARKING_COMPLETE.md  PRODUCTION_READINESS_REPORT.md  README.md  SECURITY.md  SECURITY_HARDENING_REPORT.md  STDLIB_CONSOLIDATION_REPORT.md  build.err  build_full.err  debug_test.rs  rustfmt.toml  test_assignment_manual.sh  test_cos.ly  test_data_consolidation.rs  test_debug_listable.ly  test_length.ly  test_multiple_functions.ly  test_plus.ly  test_quantum_simple.rs  test_sin.ly  test_sin_fixed.ly  test_stdlib_consolidation_simple  test_stdlib_consolidation_simple.rs  tmp_assoc.lyra  tmp_assoc2.lyra  (+6 more)
.cargo/: config.toml
benches/: CLAUDE.md  advanced_memory_benchmarks.rs  async_comprehensive_benchmarks.rs  async_performance_benchmarks.rs  async_performance_monitor.rs  automated_performance_monitor.rs  concurrency_benchmarks.rs  fast_path_performance_benchmarks.rs  lyra_benchmarks.rs  memory_benchmarks.rs  memory_optimization_benchmarks.rs  memory_profiling.rs  micro_benchmarks.rs  performance_validation.rs  phase3b_performance_validation.rs  regression_detection.rs  rule_ordering_benchmarks.rs  serialization_benchmarks.rs  speedup_claims_validation.rs  type_system_benchmarks.rs  workload_simulations.rs
crates/lyra-compiler/: Cargo.toml
crates/lyra-compiler/src/: analyzer.rs  lib.rs  manifest.rs  registry.rs
crates/lyra-lsp/: Cargo.toml
crates/lyra-lsp/src/: main.rs
crates/lyra-mcp/: Cargo.toml
crates/lyra-mcp/src/: lib.rs  main.rs
crates/lyra-notebook-app/: Cargo.toml  build.rs  package-lock.json  package.json  tauri.conf.json
crates/lyra-notebook-app/solid/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/lyra-notebook-app/solid/src/: App.tsx  main.tsx
crates/lyra-notebook-app/solid/src/app/: NotebookView.tsx
crates/lyra-notebook-app/solid/src/cells/: CodeCell.tsx
crates/lyra-notebook-app/solid/src/editor/: completion.ts  diagnostics.ts  hover.ts  lyra-language.ts  operators.ts  signature.ts
crates/lyra-notebook-app/solid/src/outputs/: LyraValueTree.tsx  OutputsView.tsx  TablePreview.tsx
crates/lyra-notebook-app/solid/src/panels/: Diagnostics.tsx  Outline.tsx  Values.tsx
crates/lyra-notebook-app/solid/src/services/: tauri.ts
crates/lyra-notebook-app/solid/src/state/: types.ts
crates/lyra-notebook-app/solid/src/styles/: theme.css
crates/lyra-notebook-app/src/: main.rs
crates/lyra-notebook-app/ui/: index.html  main.js  styles.css
crates/lyra-notebook-core/: Cargo.toml
crates/lyra-notebook-core/src/: ids.rs  io.rs  lib.rs  ops.rs  schema.rs  validate.rs
crates/lyra-notebook-core/tests/: core_schema.rs
crates/lyra-notebook-gui/: Cargo.toml
crates/lyra-notebook-gui/src/: api.rs  lib.rs  tauri_cmd.rs
crates/lyra-notebook-kernel/: Cargo.toml
crates/lyra-notebook-kernel/src/: ipc.rs  lib.rs  session.rs  types.rs
crates/lyra-repl/: Cargo.toml
crates/lyra-repl/src/: helpers.rs  main.rs
crates/lyra-runner/: Cargo.toml
crates/lyra-runner/src/: keep_symbols.in.rs  main.rs
crates/lyra-runtime/: Cargo.toml
crates/lyra-runtime/src/: attrs.rs  eval.rs  lib.rs  trace.rs
crates/lyra-runtime/src/concurrency/: actors.rs  channels.rs  futures.rs  mod.rs  pool.rs  scope.rs
crates/lyra-runtime/src/core/: assign.rs  call.rs  defs.rs  docs.rs  env.rs  introspection.rs  mod.rs  rewrite.rs  schema_explain.rs
crates/lyra-runtime/tests/: concurrency.rs  dataset_ops.rs  defs.rs  env.rs  explain_trace.rs  numeric.rs  packed.rs  rewrite.rs  runtime_smoke.rs  wl_operators.rs
crates/lyra-stdlib/: Cargo.toml
crates/lyra-stdlib/src/: algebra.rs  assoc.rs  audio.rs  collections.rs  concurrency.rs  containers.rs  crypto.rs  dataset.rs  db.rs  dev.rs  dispatch.rs  display.rs  docs.rs  explain.rs  frame.rs  fs.rs  functional.rs  git.rs  graphs.rs  image.rs  io.rs  lib.rs  list.rs  logging.rs  logic.rs  math.rs  media.rs  memory.rs  metrics.rs  ml.rs  model.rs  module.rs  ndarray.rs  net.rs  nn.rs  notebook.rs  package.rs  policy.rs  process.rs  project.rs  (+15 more)
crates/lyra-stdlib/tests/: algebra.rs  audio.rs  collections.rs  combinatorics.rs  config_env_io_stats.rs  containers_docker.rs  crypto.rs  crypto_tls.rs  data_formats.rs  dataset_arrow_lazy.rs  dataset_parquet_lazy.rs  dataset_windows.rs  db_duckdb.rs  db_sqlite.rs  errors.rs  fft_signal.rs  functional_basic.rs  graphs.rs  image.rs  linalg_norms.rs  matchq.rs  math_basic.rs  math_distributions.rs  math_more.rs  media.rs  naming.rs  ndarray.rs  nn_conv2d.rs  nn_convtranspose.rs  nn_cross_attention.rs  nn_decoder.rs  nn_decoder_stack.rs  nn_encoder.rs  nn_encoder_stack.rs  nn_layers.rs  nn_new_layers.rs  nn_norms.rs  nn_ops.rs  nn_residual.rs  nn_separable.rs  (+16 more)
docs/: ASYNC_PERFORMANCE_IMPROVEMENTS.md  CLAUDE.md  DESIGN.md  EXPLAIN_SCHEMA.md  LANGUAGE_REWRITE_RFC.md  NAMING_CONVENTIONS.md  PERFORMANCE.md  PHASE1_CHECKS.md  PHASE_14A_AI_ML_INTEGRATION.md  PHASE_15B_ANALYTICS_IMPLEMENTATION.md  PHASE_16B_OBSERVABILITY_IMPLEMENTATION.md  PHASE_2_TODO.md  QUANTUM_LAYER_REDESIGN.md  REFACTORING_MODULE_SPLITS.md  REWRITE_API.md  STDLIB_API_PROPOSALS.md  TREE_SHAKING.md  api.md  enhanced_helper_integration.md  grammar.ebnf  grammar.md  language-reference.md  quickstart.md  stdlib-cloud.md  stdlib-graphql.md  stdlib-reference.md  type-system.md  user-guide.md  visual-language.md
examples/: 01_basic_syntax.lyra  02_pattern_matching.lyra  03_mathematics.lyra  04_symbolic.lyra  05_functional.lyra  06_types.lyra  07_error_handling.lyra  08_foreign_objects.lyra  09_data_structures.lyra  10_control_flow.lyra  (+27 more)
fuzz/: CLAUDE.md  Cargo.toml
fuzz/fuzz_targets/: fuzz_compiler.rs  fuzz_lexer.rs  fuzz_parser.rs  fuzz_stdlib.rs  fuzz_vm.rs
lyra-pkg/: CLAUDE.md  Cargo.toml
lyra-pkg/src/: main.rs
(+732 files in other folders)
