[workspace]
members = [
  "crates/lyra-core",
  "crates/lyra-parser",
  "crates/lyra-repl",
  "crates/lyra-runtime", "crates/lyra-stdlib", "crates/lyra-rewrite",
  "crates/lyra-compiler",
  "crates/lyra-runner",
  "crates/lyra-pm-cli",
  "crates/lyra-mcp",
  "crates/lyra-lsp",
  "crates/lyra-docgen",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
thiserror = "1"
lazy_static = "1"
logos = "0.14"
unicode-ident = "1"
rustyline = "13"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"

[patch.crates-io]
# Work around arrow-arith v51 ambiguity with Chrono's Datelike::quarter by overriding the crate
# to a locally patched copy that disambiguates the method call.
arrow-arith = { path = "vendor/arrow-arith" }

[workspace.lints.rust]
unused_imports = "warn"
dead_code = "warn"
