[package]
name = "lyra-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
lyra = { path = ".." }
arbitrary = { version = "1.0", features = ["derive"] }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_lexer"
path = "fuzz_targets/fuzz_lexer.rs"
test = false
doc = false

[[bin]]
name = "fuzz_parser"
path = "fuzz_targets/fuzz_parser.rs"
test = false
doc = false

[[bin]]
name = "fuzz_compiler"
path = "fuzz_targets/fuzz_compiler.rs"
test = false
doc = false

[[bin]]
name = "fuzz_vm"
path = "fuzz_targets/fuzz_vm.rs"
test = false
doc = false

[[bin]]
name = "fuzz_stdlib"
path = "fuzz_targets/fuzz_stdlib.rs"
test = false
doc = false