[package]
name = "lyra-pkg"
version = "0.1.0"
edition = "2021"
authors = ["Parker Gabel"]
description = "Standalone Lyra Package Manager"
license = "MIT"

[[bin]]
name = "lyra-pkg"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }