[package]
name = "lyra-notebook-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { version = "1", features = ["serde", "v7"] }
bitflags = { version = "2", features = ["serde"] }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
