[package]
name = "lyra-notebook-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
lyra-notebook-kernel = { path = "../lyra-notebook-kernel" }
lyra-notebook-core = { path = "../lyra-notebook-core" }
lyra-parser = { path = "../lyra-parser" }
lyra-runtime = { path = "../lyra-runtime" }
lyra-stdlib = { path = "../lyra-stdlib" }
lyra-core = { path = "../lyra-core" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { version = "1", features = ["v7", "serde"] }
parking_lot = "0.12"
anyhow = { workspace = true }
lazy_static = { version = "1" }
tauri = { version = "2", optional = true }
regex = "1"
base64 = "0.22"

[features]
default = []
tauri_cmd = ["dep:tauri"]
