[package]
name = "lyra-repl"
version = "0.1.0"
edition = "2021"

[dependencies]
rustyline = { workspace = true, features = ["custom-bindings", "with-fuzzy"] }
colored = { workspace = true }
anyhow = { workspace = true }
lyra-core = { path = "../lyra-core" }
lyra-parser = { path = "../lyra-parser" }
lyra-runtime = { path = "../lyra-runtime" }
lyra-stdlib = { path = "../lyra-stdlib" }
lyra-mcp = { path = "../lyra-mcp" }
serde = { workspace = true }
serde_json = { workspace = true }
strsim = "0.11"
terminal_size = "0.3"
reedline = { version = "0.29", optional = true }

[features]
default = []
reedline = ["dep:reedline"]

[[bin]]
name = "lyra"
path = "src/main.rs"
