[package]
name = "lyra-runner"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
lyra-core = { path = "../lyra-core" }
lyra-runtime = { path = "../lyra-runtime" }
lyra-stdlib = { path = "../lyra-stdlib", features = ["net_https"] }
lyra-parser = { path = "../lyra-parser" }

[features]
default = []

[[bin]]
name = "lyra-runner"
path = "src/main.rs"
