[package]
name = "lyra-stdlib"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
lyra-runtime = { path = "../lyra-runtime" }
lyra-core = { path = "../lyra-core" }
lyra-parser = { path = "../lyra-parser" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking","json","multipart","rustls-tls"], optional = true }
rustls = { version = "0.21", default-features = false, features = ["tls12"], optional = true }
rustls-pemfile = { version = "1", optional = true }

[features]
default = ["core", "string", "math", "list", "assoc", "logic", "concurrency", "schema", "explain", "tools", "io", "dataset"]
core = []
string = []
math = []
list = []
assoc = []
logic = []
concurrency = []
schema = []
explain = []
tools = []
testing = []
simd_kernels = []
big-real-rug = ["rug"]
io = []
net = []
net_https = ["net", "reqwest", "rustls", "rustls-pemfile"]
dataset = []

[dependencies.rug]
optional = true
version = "1"
